tests/logical/logical.exp
Error ---------------------------------------------------------- logical.js:8:12

Cannot return `x && '123'` because boolean is incompatible with number.


Error --------------------------------------------------------- logical.js:23:12

Cannot return `false && '123'` because boolean is incompatible with number.


Error -------------------------------------------------------- logical.js:101:12

Cannot return `(x != null) && (x > 10)` because:
 - boolean is incompatible with string.
 - boolean is incompatible with string.


Error -------------------------------------------------------- logical.js:109:12

Cannot return `(x != null) && x` because boolean is incompatible with number.


Error -------------------------------------------------------- logical.js:117:12

Cannot return `(x != undefined) && x` because boolean is incompatible with
number.


Error -------------------------------------------------------- logical.js:124:12

Cannot return `x && '123'` because boolean is incompatible with string.


Error -------------------------------------------------------- logical.js:148:12

Cannot return `x || 0` because boolean is incompatible with string.


Error -------------------------------------------------------- logical.js:176:12

Cannot return `true || '123'` because boolean is incompatible with number.


Error -------------------------------------------------------- logical.js:281:12

Cannot return `x || (1 && 'foo')` because boolean is incompatible with string.


Error: logical.js:291
291:     return x || y || false;
                          ^^^^^ boolean. This type is incompatible with the expected return type of
290: ): number | string { // expected `: number | string | boolean`
        ^^^^^^^^^^^^^^^ union: number | string
  Member 1:
  290: ): number | string { // expected `: number | string | boolean`
          ^^^^^^ number
  Error:
  291:     return x || y || false;
                            ^^^^^ boolean. This type is incompatible with
  290: ): number | string { // expected `: number | string | boolean`
          ^^^^^^ number
  Member 2:
  290: ): number | string { // expected `: number | string | boolean`
                   ^^^^^^ string
  Error:
  291:     return x || y || false;
                            ^^^^^ boolean. This type is incompatible with
  290: ): number | string { // expected `: number | string | boolean`
                   ^^^^^^ string

Error: logical.js:315
315:     return x && y && false;
                          ^^^^^ boolean. This type is incompatible with the expected return type of
314: ): number | string { // expected `: number | string | boolean`
        ^^^^^^^^^^^^^^^ union: number | string
  Member 1:
  314: ): number | string { // expected `: number | string | boolean`
          ^^^^^^ number
  Error:
  315:     return x && y && false;
                            ^^^^^ boolean. This type is incompatible with
  314: ): number | string { // expected `: number | string | boolean`
          ^^^^^^ number
  Member 2:
  314: ): number | string { // expected `: number | string | boolean`
                   ^^^^^^ string
  Error:
  315:     return x && y && false;
                            ^^^^^ boolean. This type is incompatible with
  314: ): number | string { // expected `: number | string | boolean`
                   ^^^^^^ string

Error -------------------------------------------------------- logical.js:322:12

Cannot return `false && x && y` because boolean is incompatible with array type.


Error -------------------------------------------------------- logical.js:329:12

Cannot return `x && false && y` because:
 - number is incompatible with array type.
 - boolean is incompatible with array type.


Error -------------------------------------------------------- logical.js:348:18

Cannot assign `y || true` to `y` because boolean is incompatible with number.


Error -------------------------------------------------------- logical.js:348:18

boolean is incompatible with number.


Error -------------------------------------------------------- logical.js:363:12

Cannot return `y` because boolean is incompatible with number.


Error -------------------------------------------------------- logical.js:371:18

Cannot assign `y && true` to `y` because boolean is incompatible with number.


Error -------------------------------------------------------- logical.js:371:18

boolean is incompatible with number.


Error -------------------------------------------------------- logical.js:380:12

Cannot return array literal because:
 - in type argument `T` and then property `x`, number is incompatible with
   string.
 - in type argument `T` and then property `x`, boolean is incompatible with
   string.
 - in type argument `T` and then property `x`, boolean is incompatible with
   string.


Error -------------------------------------------------------- logical.js:396:12

Cannot return array literal because:
 - in type argument `T` and then property `x`, number is incompatible with
   string.
 - in type argument `T` and then property `x`, boolean is incompatible with
   string.
 - in type argument `T` and then property `x`, boolean is incompatible with
   string.


Error -------------------------------------------------------- logical.js:510:11

Cannot return `x.y && x.z` because string is incompatible with boolean.


Error -------------------------------------------------------- logical.js:513:11

Cannot return `x.y || x.z` because string is incompatible with boolean.



Found 28 errors
